Enhancement and include JsDocs

--- a/address-book/package.json
+++ b/address-book/package.json
@@ -20,7 +20,8 @@
     "build": "react-scripts build",
     "lint": "./node_modules/.bin/eslint src/**/*.js",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "generate-docs": "jsdoc -c conf.json"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -44,6 +45,7 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^1.7.0"
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "jsdoc": "^3.6.3"
   }
 }
