--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "redux-saga": "^1.1.3"
   },
   "scripts": {
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "lint": "./node_modules/.bin/eslint src/**/*.js",
@@ -46,6 +47,7 @@
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.7.0",
     "jsdoc": "^3.6.4",
-    "node-sass": "^4.14.1"
+    "node-sass": "^4.14.1",
+    "source-map-explorer": "^2.4.2"
   }
 }
