--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "address-book",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://panglat.github.io/code-challenge-address-book-app/",
   "dependencies": {
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
@@ -46,6 +47,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.7.0",
+    "gh-pages": "^3.1.0",
     "jsdoc": "^3.6.4",
     "node-sass": "^4.14.1",
     "source-map-explorer": "^2.4.2"
