--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "generate-docs": "jsdoc -c conf.json",
-    "predeploy": "npm run build",
+    "copy-docs-to-build": "copyfiles --all ./docs/* ./build/static",
+    "predeploy": "npm run build && npm run copy-docs-to-build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
@@ -42,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "copyfiles": "^2.3.0",
     "eslint": "^6.7.1",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-airbnb-base": "^14.0.0",
