--- a/package.json
+++ b/package.json
@@ -14,6 +14,23 @@
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3"
   },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "gh-pages": "^3.1.0",
+    "husky": "^4.2.5",
+    "jsdoc": "^3.6.4",
+    "lint-staged": "^10.2.11",
+    "node-sass": "^4.14.1",
+    "prettier": "^2.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "source-map-explorer": "^2.4.2"
+  },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-scripts start",
@@ -39,19 +56,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.21.2",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^1.7.0",
-    "gh-pages": "^3.1.0",
-    "jsdoc": "^3.6.4",
-    "node-sass": "^4.14.1",
-    "redux-devtools-extension": "^2.13.8",
-    "source-map-explorer": "^2.4.2"
   }
 }
